Added action reserve list by table
